--- a/blog/templates/blog/category/list_of_post_category.html
+++ b/blog/templates/blog/category/list_of_post_category.html
@@ -1,11 +1,12 @@
 {% extends 'blog/base.html' %}
 
-{% block title %}List of blog post{% endblock %}
+{% block title %}{{ category.name }}{% endblock %}
 
 {% block content %}
+    <h1>{{ category.name }}</h1>
     {% for posts in post %}
         <h2><a href="{{ posts.get_absolute_url }}">{{ posts.title  }}</a></h2>
-        <p>Written by {{ posts.author }} on {{ posts.published }}  in <a href="{{ posts.category.get_absolute_url }}">{{ posts.category }}</a> </p>
+        <p>Written by {{ posts.author }} on {{ posts.published }}</p>
         <hr>
         {{ posts.content|truncatewords:40|linebreaks }}
     {% endfor %}
