--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,11 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="blog">
+    <meta name="author" content="Raihan Uddin">
+    <!-- <link rel="icon" href=""> -->
     <title>{% block title %}{% endblock %}</title>
+
+    <!-- CSS Style -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'  %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/ie10-viewport-bug-workaround.css' %}">
+
+    <!-- JS -->
+    <script type="text/javascript" src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
 </head>
     <body>
         {% block content %}
         {% endblock %}
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
     </body>
 </html>
