Styling blog using bootstrap 4

--- a/blog/templates/blog/post/post_detail.html
+++ b/blog/templates/blog/post/post_detail.html
@@ -1,21 +1,37 @@
 {% extends 'blog/base.html' %}
 
+{% block description %} {{ post.seo_description }} {% endblock %}
+
 {% block title %}{{ post.seo_title }}{% endblock %}
 
 {% block content %}
-    <h2>{{ post.title }}</h2>
-    <p>Written by {{ post.author }} on {{ post.published }}</p>
-    <hr>
-    {{ post.content|linebreaks }}
-    <hr>
-    <h1>Leave A Comment</h1>
-    <p>Total Number Of Comments {{ post.comments.count }}</p>
-    <a href="{% url 'blog:add_comment' slug=post.slug %}">Leave A Comment</a>
-    {% for comment in post.comments.all %}
-        <p>{{ comment.created }}</p>
-        <p>{{ comment.user }}</p>
-        <p>{{ comment.body }}</p>
-        {% empty %}
-            <p>There is no comments</p>
-    {% endfor %}
+<div class="row">
+    <div class="col-md-8">
+        <div class="page-header">
+            <h1>{{ post.title }}</h1>
+        </div>
+
+        <small>Written by {{ post.author }} on {{ post.published }} in <a href="{{ post.category.get_absolute_url }}">{{ post.category }}</a> </small>
+        {{ post.content|linebreaks }}
+
+        <div class="page-header">
+            <h1>Leave A Comment </h1><small>Total Number Of Comments {{ post.comments.count }}</small>
+        </div>
+
+        <p class="text-center"><button type="button" class="btn"> <a href="{% url 'blog:add_comment' slug=post.slug %}">Leave A Comment</a></button></p>
+        {% for comment in post.comments.all %}
+        <div class="card">
+            <div class="card-header">{{ comment.user }}</div> commented on {{ comment.created }}
+            <div class="card-body">
+                {{ comment.body }}
+            </div>
+        </div>
+            {% empty %}
+                <p>There is no comments</p>
+        {% endfor %}
+    </div>
+        <div class="page-header">
+            <h1>{{ post.title }}</h1>
+        </div>
+</div>
 {% endblock %}
