--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,9 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="blog">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="author" content="Raihan Uddin">
+    <link rel="icon" href="">
     <!-- <link rel="icon" href=""> -->
     <title>{% block title %}{% endblock %}</title>
 
@@ -15,10 +18,18 @@
 
     <!-- JS -->
     <script type="text/javascript" src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
     <body>
-        {% block content %}
-        {% endblock %}
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
