--- a/blog/templates/blog/post/list_of_post.html
+++ b/blog/templates/blog/post/list_of_post.html
@@ -1,12 +1,24 @@
 {% extends 'blog/base.html' %}
-
+{% block description %}This is the description for list of post{% endblock %}
 {% block title %}List of blog post{% endblock %}
 
 {% block content %}
-    {% for posts in post %}
-        <h2><a href="{{ posts.get_absolute_url }}">{{ posts.title  }}</a></h2>
-        <p>Written by {{ posts.author }} on {{ posts.published }}  in <a href="{{ posts.category.get_absolute_url }}">{{ posts.category }}</a> </p>
-        <hr>
-        {{ posts.content|truncatewords:40|linebreaks }}
-    {% endfor %}
+<div class="row">
+    <div class="col-md-8">
+        <div class="page-header">
+            <h1>Our Latest Post</h1>
+        </div>
+        {% for posts in post %}
+            <h2><a href="{{ posts.get_absolute_url }}">{{ posts.title  }}</a></h2>
+            <small>Written by {{ posts.author }} on{{ posts.published }}  in <a href="{{ posts.category.get_absolute_url }}">{{ posts.category }}</a> </small>
+            <hr>
+            {{ posts.content|truncatewords:40|linebreaks }}
+        {% endfor %}
+    </div>
+    <div class="col-md-4">
+        <div class="page-header">
+            <h1>Sidebar</h1>
+        </div>
+    </div>
+</div>
 {% endblock %}
