--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,6 +15,7 @@
     <!-- CSS Style -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'  %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/ie10-viewport-bug-workaround.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!-- JS -->
     <script type="text/javascript" src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
