--- a/blog/templates/blog/post/post_detail.html
+++ b/blog/templates/blog/post/post_detail.html
@@ -30,8 +30,10 @@
                 <p>There is no comments</p>
         {% endfor %}
     </div>
+    <div class="col-md-4">
         <div class="page-header">
-            <h1>{{ post.title }}</h1>
+            <h1>Sidebar</h1>
         </div>
+    </div>
 </div>
 {% endblock %}
