--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,8 +14,9 @@
 
     <!-- CSS Style -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'  %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/ie10-viewport-bug-workaround.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!-- JS -->
@@ -29,6 +30,7 @@
 </head>
     <body>
         <div class="container">
+            {% include "blog/messages.html" %}
             {% block content %}
             {% endblock %}
         </div>
